# dirt

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  atlas.hcl  conftest.py  cpp.json  main.py  markdown.json  pyproject.toml  python.json  typescript.json
.agents/: PLANS.md
.claude/: settings.json
.codex/: config.toml
apps/camera-agent/: pyproject.toml
apps/camera-agent/src/dirt_camera_agent/: __init__.py  config.py  main.py  service.py
apps/camera-agent/tests/: test_camera_agent.py
apps/control-plane/: pyproject.toml  railway.json
apps/control-plane/src/dirt_control/: __init__.py  app.py  audit.py  bootstrap.py  bootstrap_gateway.py  db.py  deps.py  retention.py  security.py  settings.py  storage.py
apps/control-plane/src/dirt_control/api/: __init__.py  browser.py  gateway.py
apps/control-plane/src/dirt_control/models/: __init__.py  cloud.py
apps/control-plane/tests/: conftest.py  test_api.py  test_control_plane_boundary_guardrails.py
apps/gateway/: pyproject.toml
apps/gateway/src/dirt_gateway/: __init__.py  cloud.py  commands.py  local.py  main.py  outbox.py  protocols.py  sync.py
apps/gateway/tests/: test_cloud_client.py  test_gateway_boundary_guardrails.py  test_main.py  test_sync.py
apps/hwd/: pyproject.toml
apps/hwd/src/dirt_hwd/: app.py  deps.py  main.py  supervise.py
apps/hwd/src/dirt_hwd/api/: ingest.py
apps/hwd/src/dirt_hwd/services/: archive.py  device_watchdog.py  environment_allocator.py  fan_controller.py  humidifier.py  humidifier_dispatch.py  humidifier_pi.py  kasa_inventory.py  kasa_schedule.py  lights.py  metric_freshness.py  sensor_quality.py  serial_reader.py
apps/hwd/tests/: test_archive.py  test_device_watchdog.py  test_environment_allocator.py  test_fan_controller.py  test_humidifier_dispatch.py  test_humidifier_helpers.py  test_humidifier_loop.py  test_humidifier_pi.py  test_humidifier_pi_plant.py  test_humidifier_stuck.py  test_ingest_api.py  test_ingest_derivation.py  test_ingest_properties.py  test_kasa_schedule.py  test_lights_loop.py  test_metric_freshness.py  test_sensor_quality.py  test_serial_reader.py  test_supervise.py
apps/mcp/: pyproject.toml
apps/mcp/src/dirt_mcp/: app.py  auth.py  tools.py
apps/mcp/tests/: test_mcp.py
apps/shared/: pyproject.toml
apps/shared/src/dirt_shared/: agent_trace.py  app_wiring.py  cloud_assets.py  cloud_contract.py  config.py  db.py  observability.py  sensor_contract.py  testing.py
apps/shared/src/dirt_shared/camera/: __init__.py  source.py  spool.py
apps/shared/src/dirt_shared/models/: __init__.py  cloud_gateway.py  command.py  device.py  enums.py  grow_run.py  grow_state.py  plant.py  schedule.py  sensor_calibration.py  sensor_node.py  sensor_reading.py  site.py  snapshot.py  tent.py  zone.py
apps/shared/src/dirt_shared/services/: camera_publisher.py  capture.py  commands.py  daily_report.py  daily_sensors.py  daily_synthesis.py  fan_node.py  govee.py  grow_state.py  humidifier_state.py  light_schedules.py  mock_sensors.py  photos.py  plant_detail.py  plants.py  ptz.py  readings.py  scope.py  scope_catalog.py  snapshots.py  system_status.py  telegram.py  wiki.py
apps/shared/tests/: conftest.py  test_camera.py  test_camera_publisher.py  test_capture.py  test_cloud_assets.py  test_cloud_contract.py  test_commands.py  test_daily_report.py  test_daily_sensors.py  test_daily_synthesis.py  test_db.py  test_fan_node.py  test_govee.py  test_grow_state.py  test_grow_state_properties.py  test_legacy_retirement_audit.py  test_milestone4_scope.py  test_observability_isolation.py  test_pg_fixture.py  test_photos.py  test_python_quality_radar.py  test_readings_scope.py  test_scoped_identity_models.py  test_system_status_scope.py  test_telegram.py
apps/shared/tests/fixtures/: govee_h7142_discovery.json
apps/voice/: pyproject.toml
apps/voice/src/dirt_voice/channels/: _audio_transport.py  _observers.py  voice.py
apps/voice/src/dirt_voice/tools/: __init__.py  sensors.py  wiki.py
apps/voice/tests/: test_sensor_tools.py
apps/wake-word/: .dockerignore  AGENTS.md  CLAUDE.md  RETRAINING.md  pyproject.toml
apps/wake-word/data-gen/: capture-realmic.py  capture-rir-play.py  capture-rir-record.py  elevenlabs-clones-batch.py  elevenlabs-neighbors-batch.py
apps/wake-word/docker/: Dockerfile  entrypoint.py  trainer-constraints.txt  trainer-requirements.txt
apps/wake-word/kaggle/: README.md  train-hey-claudia.py
apps/wake-word/kaggle/datasets/dirt-wakeword-validation/: dataset-metadata.json
apps/wake-word/reference/: automatic_model_training.py
apps/wake-word/src/dirt_wake_word/: __init__.py  augment.py  config.py  export.py  feature_device.py  main.py  paths.py  real_audio_score.py  seed.py  select.py  subsets.py  timing.py  train.py  tts_cache.py  validate.py  verify.py
apps/wake-word/tests/: conftest.py  test_augment_feature_device.py  test_imports.py  test_paths.py  test_seed.py  test_smoke.py
apps/wake-word/validation/: live-test.py
apps/web/: pyproject.toml
apps/web/src/dirt_web/: app.py  auth.py  deps.py  main.py
apps/web/src/dirt_web/api/: auth.py  feed.py  grow.py  humidifier.py  metric_registry.py  plants.py  ptz.py  scope.py  sensors.py  snapshots.py  system.py  wiki.py
apps/web/src/dirt_web/templates/: login.html
apps/web/tests/: test_app.py  test_auth.py  test_auth_endpoints.py  test_feed_endpoints.py  test_feed_snapshot_endpoint.py  test_grow_endpoint.py  test_humidifier_history_endpoint.py  test_humidifier_state_endpoint.py  test_plants_detail_endpoint.py  test_plants_list_endpoint.py  test_plants_moisture_endpoint.py  test_ptz_look_endpoint.py  test_ptz_preset_endpoint.py  test_ptz_state_endpoint.py  test_ptz_zoom_endpoint.py  test_scope_endpoints.py  test_sensors_api.py  test_sensors_current_endpoint.py  test_sensors_history_endpoint.py  test_snapshots_api.py  test_spa_serving.py  test_system_devices_endpoint.py  test_wiki_file_endpoint.py  test_wiki_search_endpoint.py  test_wiki_tree_endpoint.py
contracts/python/: pyproject.toml
contracts/python/src/dirt_contracts/webapp_v1/: __init__.py  models.py
(+761 files in other folders)
