[project]
name = "dirt"
version = "0.1.0"
description = "Home grow monitoring system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.21",
    "python-dotenv>=1.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.13.1",
    "itsdangerous>=2.2.0",
    "mcp[cli]>=1.9",
    "pyserial>=3.5",
    "pillow>=12.2.0",
    "deepgram-sdk>=6.1.1",
    "sounddevice>=0.5.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.11",
    "pytestarch>=4.0.1",
    "pytest-playwright-asyncio>=0.7.2",
    "pytest-testmon>=2.2.0",
    "schemdraw>=0.22",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
