[project]
name = "dirt-camera-agent"
version = "0.1.0"
description = "Camera edge capture and cloud asset upload agent."
requires-python = ">=3.13"
dependencies = [
    "dirt-shared",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_camera_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
