[project]
name = "dirt-control-plane"
version = "0.1.0"
description = "Hosted Dirt cloud control-plane API."
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.36",
    "fastapi>=0.115",
    "itsdangerous>=2.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.13.1",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.34",
]

# deptry: per-rule ignores. See apps/tests/invariants/test_dependency_hygiene.py.
#   DEP003 sqlalchemy / starlette — transitively pulled in via sqlmodel /
#   fastapi respectively; idiomatic to import them directly.
[tool.deptry.per_rule_ignores]
DEP003 = ["sqlalchemy", "starlette"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
