[project]
name = "dirt-gateway"
version = "0.1.0"
description = "Outbound local gateway for the hosted Dirt control plane."
requires-python = ">=3.13"
dependencies = [
    "dirt-shared",
    "httpx>=0.28",
    "sqlmodel>=0.0.22",
]

# deptry: per-rule ignores. See apps/tests/invariants/test_dependency_hygiene.py.
#   DEP003 sqlalchemy — transitively pulled in via sqlmodel; imported directly
#   for async engine/session and typed query primitives.
[tool.deptry.per_rule_ignores]
DEP003 = ["sqlalchemy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
