[project]
name = "dirt-hwd"
version = "0.1.0"
description = "Hardware daemon: sensor ingest, humidifier loop, archive loop, device watchdog"
requires-python = ">=3.13"
dependencies = [
    "dirt-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-kasa",
    "pydantic>=2.0",
    "httpx>=0.28.1",
]

# deptry: per-rule ignores. See apps/tests/invariants/test_dependency_hygiene.py.
#   DEP003 sqlalchemy / starlette — transitively pulled in via sqlmodel /
#   fastapi respectively. Idiomatic to import them directly.
[tool.deptry.per_rule_ignores]
DEP003 = ["sqlalchemy", "starlette"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_hwd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
