[project]
name = "dirt-mcp"
version = "0.1.0"
description = "MCP server exposing dirt-shared services to Claude Desktop"
requires-python = ">=3.13"
dependencies = [
    "dirt-shared",
    "mcp[cli]>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
