[project]
name = "dirt-mcp"
version = "0.1.0"
description = "MCP server exposing dirt-shared services to Claude Desktop"
requires-python = ">=3.13"
dependencies = [
    "dirt-shared",
    "mcp[cli]>=1.9",
]

# deptry: per-rule ignores. See apps/tests/invariants/test_dependency_hygiene.py.
#   DEP003 starlette — transitively pulled in via mcp's FastMCP; idiomatic
#   to import Request / JSONResponse directly.
[tool.deptry.per_rule_ignores]
DEP003 = ["starlette"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
