[project]
name = "dirt-voice"
version = "0.1.0"
description = "Claudia voice channel: wake word, Pipecat pipeline, Jabra I/O"
requires-python = ">=3.13"
dependencies = [
    "dirt-shared",
    "deepgram-sdk>=6.1.1",
    "sounddevice>=0.5.5",
    "elevenlabs>=2.43.0",
    "openwakeword>=0.4.0",
    "pipecat-ai[anthropic,deepgram,elevenlabs,local,silero]>=1.0.0",
    "claude-agent-sdk>=0.1.63",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_voice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
