[project]
name = "dirt-voice"
version = "0.1.0"
description = "Claudia voice channel: wake word, Pipecat pipeline, Jabra I/O"
requires-python = ">=3.13"
dependencies = [
    "dirt-shared",
    "deepgram-sdk>=6.1.1",
    "sounddevice>=0.5.5",
    "elevenlabs>=2.43.0",
    "openwakeword>=0.4.0",
    "pipecat-ai[anthropic,deepgram,elevenlabs,local,silero]>=1.0.0",
    "claude-agent-sdk>=0.1.63",
]

# deptry: per-rule ignores. See apps/tests/invariants/test_dependency_hygiene.py.
#   DEP002 deepgram-sdk / elevenlabs — consumed via pipecat's
#   [deepgram,elevenlabs] extras which wrap the SDKs at import time; the
#   declarations pin the versions pipecat resolves against.
#   DEP003 numpy / loguru / sqlalchemy / sqlmodel — transitively pulled
#   in via pipecat / dirt-shared; idiomatic to import directly at the
#   call site rather than redeclare every pipecat peer.
[tool.deptry.per_rule_ignores]
DEP002 = ["deepgram-sdk", "elevenlabs"]
DEP003 = ["numpy", "loguru", "sqlalchemy", "sqlmodel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_voice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
