[project]
name = "dirt-web"
version = "0.1.0"
description = "Dirt web UI and API (auth, sensors, snapshots, feed). MCP mount."
requires-python = ">=3.13"
dependencies = [
    "dirt-shared",
    "dirt-mcp",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    "jinja2>=3.1",
    "itsdangerous>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
