[project]
name = "dirt-web"
version = "0.1.0"
description = "Dirt web UI and API (auth, sensors, snapshots, feed). MCP mount."
requires-python = ">=3.13"
dependencies = [
    "dirt-shared",
    "dirt-mcp",
    "dirt-contracts",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "itsdangerous>=2.2.0",
]

# deptry: per-rule ignores. See apps/tests/invariants/test_dependency_hygiene.py.
#   DEP003 sqlalchemy / starlette — transitively pulled in via sqlmodel /
#   fastapi respectively; idiomatic to import them directly.
[tool.deptry.per_rule_ignores]
DEP003 = ["sqlalchemy", "starlette"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
