[project]
name = "dirt-contracts"
version = "0.1.0"
description = "Generated Pydantic models for the Dirt webapp OpenAPI contract"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirt_contracts"]
